--- a/src/components/button/button.html
+++ b/src/components/button/button.html
@@ -28,7 +28,9 @@
 
   <div class="mt-3">
     <h5>Disabled</h5>
-    <button class="co--btn co--btn--primary" disabled type="button">Button</button>
+    <button class="co--btn co--btn--primary" disabled type="button">
+      Button
+    </button>
   </div>
 
   <div class="mt-3">
@@ -43,6 +45,7 @@
       <button class="co--btn co--btn--secondary">Secondary Button</button>
       <button class="co--btn co--btn--primary">Primary Button</button>
       <button class="co--btn co--btn--danger">Danger Button</button>
+      <button class="co--btn co--btn--tertiary" type="button">Button</button>
     </div>
   </div>
 </div>
