--- a/src/components/tag/tag.html
+++ b/src/components/tag/tag.html
@@ -5,7 +5,7 @@
   LICENSE file in the root directory of this source tree.
 -->
 
-<div>
+<div class="d-flex align-items-center">
   <button class="co--tag co--tag--red">
     <span class="co--tag__label">Red</span>
   </button>
@@ -36,11 +36,50 @@
   <button class="co--tag co--tag--warm-gray">
     <span class="co--tag__label">Warm-Gray</span>
   </button>
+
+  <button class="co--tag co--skeleton">
+    <span class="co--tag__label"></span>
+  </button>
 </div>
 
-<div></div>
+<div>
+  <button class="co--tag co--tag--flat co--tag--red">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--magenta">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--purple">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--blue">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--cyan">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--teal">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--green">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--gray">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--cool-gray">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+  <button class="co--tag co--tag--flat co--tag--warm-gray">
+    <span class="co--tag__label">Flat Tag</span>
+  </button>
+</div>
 
-<div></div>
+<div>
+  <button class="co--tag co--tag--circle co--tag--magenta">
+    <span class="co--tag__label">F</span>
+  </button>
+</div>
 
 <div>
   <button class="co--tag co--tag--filter" title="Clear filter">
