--- a/src/components/tag/tag.html
+++ b/src/components/tag/tag.html
@@ -8,6 +8,20 @@
 <div class="d-flex align-items-center">
   <button class="co--tag co--tag--red">
     <span class="co--tag__label">Red</span>
+    <svg
+      focusable="false"
+      preserveAspectRatio="xMidYMid meet"
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      viewBox="0 0 16 16"
+      aria-hidden="true"
+      class="co--tag__close-icon"
+    >
+      <path
+        d="M12 4.7L11.3 4 8 7.3 4.7 4 4 4.7 7.3 8 4 11.3 4.7 12 8 8.7 11.3 12 12 11.3 8.7 8z"
+      ></path>
+    </svg>
   </button>
   <button class="co--tag co--tag--magenta">
     <span class="co--tag__label">Magenta</span>
@@ -45,6 +59,20 @@
 <div>
   <button class="co--tag co--tag--flat co--tag--red">
     <span class="co--tag__label">Flat Tag</span>
+    <svg
+      focusable="false"
+      preserveAspectRatio="xMidYMid meet"
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      viewBox="0 0 16 16"
+      aria-hidden="true"
+      class="co--tag__close-icon"
+    >
+      <path
+        d="M12 4.7L11.3 4 8 7.3 4.7 4 4 4.7 7.3 8 4 11.3 4.7 12 8 8.7 11.3 12 12 11.3 8.7 8z"
+      ></path>
+    </svg>
   </button>
   <button class="co--tag co--tag--flat co--tag--magenta">
     <span class="co--tag__label">Flat Tag</span>
@@ -92,6 +120,7 @@
       height="16"
       viewBox="0 0 16 16"
       aria-hidden="true"
+      class="co--tag__close-icon"
     >
       <path
         d="M12 4.7L11.3 4 8 7.3 4.7 4 4 4.7 7.3 8 4 11.3 4.7 12 8 8.7 11.3 12 12 11.3 8.7 8z"
