--- a/src/components/tag/tag.html
+++ b/src/components/tag/tag.html
@@ -56,6 +56,54 @@
   </button>
 </div>
 
+<div class="d-flex align-items-center">
+  <button class="co--tag co--tag--red co--tag--inverse">
+    <span class="co--tag__label">Red</span>
+    <svg
+      focusable="false"
+      preserveAspectRatio="xMidYMid meet"
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      viewBox="0 0 16 16"
+      aria-hidden="true"
+      class="co--tag__close-icon"
+    >
+      <path
+        d="M12 4.7L11.3 4 8 7.3 4.7 4 4 4.7 7.3 8 4 11.3 4.7 12 8 8.7 11.3 12 12 11.3 8.7 8z"
+      ></path>
+    </svg>
+  </button>
+  <button class="co--tag co--tag--magenta co--tag--inverse">
+    <span class="co--tag__label">Magenta</span>
+  </button>
+  <button class="co--tag co--tag--purple co--tag--inverse">
+    <span class="co--tag__label">Purple</span>
+  </button>
+  <button class="co--tag co--tag--blue co--tag--inverse">
+    <span class="co--tag__label">Blue</span>
+  </button>
+  <button class="co--tag co--tag--cyan co--tag--inverse">
+    <span class="co--tag__label">Cyan</span>
+  </button>
+  <button class="co--tag co--tag--teal co--tag--inverse">
+    <span class="co--tag__label">Teal</span>
+  </button>
+  <button class="co--tag co--tag--green co--tag--inverse">
+    <span class="co--tag__label">Green</span>
+  </button>
+  <button class="co--tag co--tag--gray co--tag--inverse">
+    <span class="co--tag__label">Gray</span>
+  </button>
+  <button class="co--tag co--tag--cool-gray co--tag--inverse">
+    <span class="co--tag__label">Cool-Gray</span>
+  </button>
+  <button class="co--tag co--tag--warm-gray co--tag--inverse">
+    <span class="co--tag__label">Warm-Gray</span>
+  </button>
+
+</div>
+
 <div>
   <button class="co--tag co--tag--flat co--tag--red">
     <span class="co--tag__label">Flat Tag</span>
