--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -22,3 +22,4 @@
 @import "./date-picker/calender/date-picker-calender";
 @import "./loading/loading";
 @import "./calender/calender";
+@import "./search-by/search-by";
