--- a/src/components/form/checkbox/checkbox.html
+++ b/src/components/form/checkbox/checkbox.html
@@ -10,7 +10,9 @@
       name="checkbox"
       checked
     />
-    <label for="co--checkbox-new" class="co--checkbox-label">Checkbox</label>
+    <label for="co--checkbox-new" class="co--checkbox-label">
+      <span class="co--checkbox-label-text">Checkbox</span>
+    </label>
   </div>
   <!-- input + label indeterminate -->
   <div class="co--form-item co--checkbox-wrapper">
@@ -22,9 +24,9 @@
       name="checkbox"
       aria-checked="mixed"
     />
-    <label for="co--checkbox-ind" class="co--checkbox-label"
-      >Indeterminate checkbox</label
-    >
+    <label for="co--checkbox-ind" class="co--checkbox-label">
+      <span class="co--checkbox-label-text">Checkbox</span>
+    </label>
   </div>
   <!-- input + label checked disabled -->
   <div class="co--form-item co--checkbox-wrapper">
