--- a/src/components/form/dropdown/dropdown.html
+++ b/src/components/form/dropdown/dropdown.html
@@ -39,6 +39,7 @@
         aria-hidden="true"
         wh-menu-anchor="left"
         aria-labelledby="example-1i7ng3rpzyp-label"
+        data-floating-menu-direction="bottom"
       >
         <li
           data-option
@@ -185,6 +186,7 @@
         aria-hidden="true"
         wh-menu-anchor="left"
         aria-labelledby="example-gjjjeyxuf6-label"
+        data-floating-menu-direction="bottom"
       >
         <li
           data-option
@@ -341,6 +343,7 @@
         aria-hidden="true"
         wh-menu-anchor="left"
         aria-labelledby="example-xcfretaib7h-label"
+        data-floating-menu-direction="bottom"
       >
         <li
           data-option
@@ -512,6 +515,7 @@
         aria-hidden="true"
         wh-menu-anchor="left"
         aria-labelledby="example-ujn0i8pm5i8-label"
+        data-floating-menu-direction="bottom"
       >
         <li
           data-option
