--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -23,3 +23,7 @@
 @import "./loading/loading";
 @import "./calender/calender";
 @import "./search-by/search-by";
+@import "./sort-by/sort-by";
+@import "./label-and-value/label-and-value";
+@import "./timeline-table/timeline-table";
+@import "./tree-list/tree-list";
