--- a/src/components/search-by/search-by.html
+++ b/src/components/search-by/search-by.html
@@ -1,5 +1,5 @@
 <div class="co--search-by">
-  <div data-search role="search" class="co--search co--search--xl">
+  <div data-search role="search" class="co--search co--search--lg">
     <label id="search-input-label-1" class="co--label" for="search__input-1"
       >Search</label
     >
@@ -46,7 +46,7 @@
     </button>
   </div>
   <button
-    class="co--btn co--btn--icon-only"
+    class="co--btn co--btn--field co--btn--icon-only"
     data-search-by-menu-target="#search-by-menu-1"
     type="button"
   >
