--- a/src/components/search-by/search-by.html
+++ b/src/components/search-by/search-by.html
@@ -13,7 +13,7 @@
       focusable="false"
       preserveAspectRatio="xMidYMid meet"
       xmlns="http://www.w3.org/2000/svg"
-      class="co--search-magnifier"
+      class="co--search-magnifier-icon"
       width="16"
       height="16"
       viewBox="0 0 16 16"
