--- a/src/components/search/search.html
+++ b/src/components/search/search.html
@@ -14,7 +14,7 @@
         focusable="false"
         preserveAspectRatio="xMidYMid meet"
         xmlns="http://www.w3.org/2000/svg"
-        class="co--search-magnifier"
+        class="co--search-magnifier-icon"
         width="16"
         height="16"
         viewBox="0 0 16 16"
@@ -61,7 +61,7 @@
         focusable="false"
         preserveAspectRatio="xMidYMid meet"
         xmlns="http://www.w3.org/2000/svg"
-        class="co--search-magnifier"
+        class="co--search-magnifier-icon"
         width="16"
         height="16"
         viewBox="0 0 16 16"
@@ -109,7 +109,7 @@
           focusable="false"
           preserveAspectRatio="xMidYMid meet"
           xmlns="http://www.w3.org/2000/svg"
-          class="co--search-magnifier"
+          class="co--search-magnifier-icon"
           width="16"
           height="16"
           viewBox="0 0 16 16"
@@ -163,7 +163,7 @@
         focusable="false"
         preserveAspectRatio="xMidYMid meet"
         xmlns="http://www.w3.org/2000/svg"
-        class="co--search-magnifier"
+        class="co--search-magnifier-icon"
         width="16"
         height="16"
         viewBox="0 0 16 16"
@@ -214,7 +214,7 @@
         focusable="false"
         preserveAspectRatio="xMidYMid meet"
         xmlns="http://www.w3.org/2000/svg"
-        class="co--search-magnifier"
+        class="co--search-magnifier-icon"
         width="16"
         height="16"
         viewBox="0 0 16 16"
@@ -266,7 +266,7 @@
           focusable="false"
           preserveAspectRatio="xMidYMid meet"
           xmlns="http://www.w3.org/2000/svg"
-          class="co--search-magnifier"
+          class="co--search-magnifier-icon"
           width="16"
           height="16"
           viewBox="0 0 16 16"
